[project]
name = "euraker"
version = "1.0.0"
description = "User-friendly Eureka article scraper with manual institutional login"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Laurence Omfoisy" }]
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pandas>=2.0.0",
  "pyarrow>=17.0.0",
  "requests>=2.31.0",
  "selenium>=4.10.0",
  "undetected-chromedriver>=3.5.0",
  "webdriver-manager>=4.0.0",
]

[project.scripts]
euraker = "eureka_scraper:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["eureka_scraper"]

[tool.uv]
package = true
